--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
   <body>
     <main class="container mx-auto mt-28 px-5 flex">
       <%= render "shared/unlogged_nav" %>
+      <%= render "shared/alert" %>
       <%= yield %>
     </main>
   </body>
