--- a/app/views/landing_pages/index.html.erb
+++ b/app/views/landing_pages/index.html.erb
@@ -1,1 +1,5 @@
-<h1>Bem vindo!</h1>
+<% if current_user %>
+  <h1>Bem vindo, <%= current_user.name %>!</h1>
+<% else %>
+  <h1>Olá, visitante!</h1>
+<% end %>
