--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
     <main class="container mx-auto mt-28 px-5 flex">
-      <%= render "shared/logged_nav" %>
+      <%= render "shared/navbar" %>
       <%= yield %>
     </main>
   </body>
