--- a/app/views/professionals/index.html.erb
+++ b/app/views/professionals/index.html.erb
@@ -1,4 +1,3 @@
-<div>
-  <h1 class="font-bold text-4xl">Professionals#index</h1>
-  <p>Find me in app/views/professionals/index.html.erb</p>
-</div>
+<section>
+  <%= render @professionals %>
+</section>
