--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hair</title>
+    <title>Barbeiros</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -12,8 +12,9 @@
   </head>
 
   <body>
-    <main class="container mx-auto mt-28 px-5 flex justify-center">
+    <main class="container mx-auto mt-28 px-5">
       <%= render "shared/navbar" %>
+      <%= render 'shared/simple_alert' %>
       <%= yield %>
     </main>
   </body>
