Add manager module and controller for admin*** ***Add manager controller test*** ***Update routes to include manager controller*** ***Update new.html.erb for customers view*** ***Update new.html.erb for admin/stores view*** ***Add index.html.erb for admin/manager view*** ***Update edit.html.erb for admin/stores view*** ***Add skeleton.html.erb for shared view*** ***Update new.html.erb for admin/professionals view*** ***Update edit.html.erb for admin/professionals view*** ***Update navbar.html.erb for admin link

--- a/app/views/admin/professionals/new.html.erb
+++ b/app/views/admin/professionals/new.html.erb
@@ -1,7 +1,8 @@
-<section class="bg-white">
-  <%= render "shared/simple_alert" %>
-  <div class="py-8 px-4 mx-auto max-w-2xl lg:py-16">
-      <h2 class="mb-4 text-xl font-bold text-gray-900">Adicionar profissional</h2>
-      <%= render "form" %>
-  </div>
-</section>
+<turbo-frame id="professionals">
+  <section class="bg-white p-4">
+    <div class="py-8 px-4 mx-auto max-w-2xl lg:py-16">
+        <h2 class="mb-4 text-xl font-bold text-gray-900">Adicionar profissional</h2>
+        <%= render "form" %>
+    </div>
+  </section>
+</turbo-frame>
