--- a/app/views/admin/stores/edit.html.erb
+++ b/app/views/admin/stores/edit.html.erb
@@ -1,7 +1,8 @@
-<section class="bg-white">
-  <%= render "shared/simple_alert" %>
-  <div class="py-8 px-4 mx-auto max-w-2xl lg:py-16">
+<turbo-frame id="stores">
+  <section class="bg-white p-4">
+    <div class="py-8 px-4 mx-auto max-w-2xl lg:py-16">
       <h2 class="mb-4 text-xl font-bold text-gray-900">Editar estabelecimento: <%= @store.name %></h2>
       <%= render "form", method: :patch %>
-  </div>
-</section>
+    </div>
+  </section>
+</turbo-frame>
