--- a/app/views/admin/stores/index.html.erb
+++ b/app/views/admin/stores/index.html.erb
@@ -1,23 +1,33 @@
-<div class="content-center">
-  <div class="flex justify-between mb-4">
-    <h1 class="text-xl font-semibold">Estabelecimentos</h1>
-    <div>
-      <%= link_to 'Cadastrar Estabelecimento', new_admin_store_path, class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 mr-4 rounded" %>
+<turbo-frame id="stores">
+  <div class="content-center p-4">
+    <div class="flex justify-between mb-4">
+      <h1 class="mt-2 ml-4 text-xl font-semibold">Estabelecimentos</h1>
+      <div class="md:hidden" x-data="{ open: false }">
+        <button @click="open = !open" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+          Menu
+        </button>
+        <div x-show="open" class="mt-2">
+          <%= link_to 'Cadastrar estabelcimento', new_admin_store_path, class: "block bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" %>
+        </div>
+      </div>
+      <div class="hidden md:block">
+        <%= link_to 'Cadastrar estabelcimento', new_admin_store_path, class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded " %>
+      </div>
+    </div>
+    <div class="overflow-x-auto overflow-auto border-solid">
+      <table class="min-w-full divide-y divide-gray-200">
+        <thead class="bg-gray-50">
+          <tr>
+            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Nome</th>
+            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider truncate">Descrição</th>
+            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Telefone</th>
+            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Endereço</th>
+          </tr>
+        </thead>
+        <tbody class="bg-white divide-y divide-gray-200">
+          <%= render @stores %>
+        </tbody>
+      </table>
     </div>
   </div>
-  <div class="overflow-x-auto overflow-auto border-solid">
-    <table class="min-w-full divide-y divide-gray-200">
-      <thead class="bg-gray-50">
-        <tr>
-          <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Nome</th>
-          <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider truncate">Descrição</th>
-          <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Telefone</th>
-          <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Endereço</th>
-        </tr>
-      </thead>
-      <tbody class="bg-white divide-y divide-gray-200">
-        <%= render @stores %>
-      </tbody>
-    </table>
-  </div>
-</div>
+</turbo-frame>
