--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,5 +1,6 @@
-<div class="place-content-center">
-  <h1 class="font-bold text-4xl">Criar conta</h1>
-  <%= render "form" %>
-</div>
-
+<turbo-frame id="new_professional">
+  <div class="place-content-center">
+    <h1 class="font-bold text-4xl">Criar conta</h1>
+    <%= render "form" %>
+  </div>
+</turbo-frame>
