Update views and routes

--- a/app/views/admin/professionals/index.html.erb
+++ b/app/views/admin/professionals/index.html.erb
@@ -1,4 +1,5 @@
 <turbo-frame id="professionals">
+  <%= render "shared/simple_alert" %>
   <div class="content-center p-4">
     <div class="flex justify-between mb-4">
       <h1 class="mt-2 ml-4 text-xl font-semibold">Profissionais</h1>
