--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -31,7 +31,7 @@
       </li>
       <% if current_professional&.admin? %>
         <li>
-          <%= link_to "Gerenciamento", admin_manager_index_path, class: "block py-2 px-3 text-dark md:bg-transparent md:p-0 #{request.path.include?('admin') ? 'md:text-blue-700 md:dark:text-blue-500 bg-blue-700 rounded text-white' : 'md:hover:text-blue-500 md:hover:bg-transparent hover:bg-gray-200 hover:rounded'}" %>
+          <%= link_to "Administração", admin_manager_index_path, class: "block py-2 px-3 text-dark md:bg-transparent md:p-0 #{request.path.include?('admin') ? 'md:text-blue-700 md:dark:text-blue-500 bg-blue-700 rounded text-white' : 'md:hover:text-blue-500 md:hover:bg-transparent hover:bg-gray-200 hover:rounded'}" %>
         </li>
       <% end %>
     </ul>
