Refactor model associations and migrations

--- a/app/views/admin/stores/index.html.erb
+++ b/app/views/admin/stores/index.html.erb
@@ -1,4 +1,4 @@
-<turbo-frame id="stores">
+<%= turbo_frame_tag "stores" do %>
   <%= render "shared/simple_alert" %>
   <div class="content-center p-4">
     <div class="flex justify-between mb-4">
@@ -31,4 +31,4 @@
       </table>
     </div>
   </div>
-</turbo-frame>
+<% end %>
