--- a/app/views/admin/available_times/new.html.erb
+++ b/app/views/admin/available_times/new.html.erb
@@ -1,4 +1,50 @@
-<turbo-frame id="professionals">
-  ola horaios
-  #TODO: implementar view de horairos 
-</turbo-frame>
+
+<div class="container border-solid border border-gray-600 rounded-lg">
+  <div class="content-center p-4">
+    <div class="justify-between">
+      <%= render "shared/simple_alert" %>
+      <h1 class="mt-2 ml-4 text-xl font-semibold">Cadastrar horários para <%= @resource.is_a?(Professional) ? "profissional: " : "loja:" %> <%= @resource.name %></h1>
+      <div class="overflow-x-auto overflow-auto border-solid">
+        <%= form_for [:admin, @resource, @available_time] do |f| %>
+          <table class="min-w-full divide-y divide-gray-200">
+            <thead class="bg-gray-50">
+              <tr>
+                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Dia da semana</th>
+                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider truncate">Hora de ínicio</th>
+                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Hora de Término</th>
+                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Disponível</th>
+              </tr>
+            </thead>
+            <tbody class="bg-white divide-y divide-gray-200">
+              <% 7.times do |i| %>
+                <%= f.fields_for "available_times[]", AvailableTime.new do |ff| %>
+                  <tr>
+                    <td class="px-6 py-4 whitespace-nowrap">
+                      <div class="text-sm text-gray-900">
+                        <%= ff.hidden_field :weekday, value: i %>
+                        <%= Date::DAYNAMES[i] %>
+                      </div>
+                    </td>
+                    <td class="px-6 py-4 whitespace-nowrap">
+                      <div class="text-sm text-gray-900"><%= ff.select :start, options_for_select((8..22).to_a), {}, class: 'form-control' %></div>
+                    </td>
+                    <td class="px-6 py-4 whitespace-nowrap">
+                      <div class="text-sm text-gray-900"><%= ff.select :finish, options_for_select((8..22).to_a, 22), {}, class: 'form-control' %></div>
+                    </td>
+                    <td class="px-6 py-4 whitespace-nowrap">
+                      <div class="text-sm text-gray-900"><%= ff.select :free, options_for_select([['Sim', 'sim'], ['Não', 'nao']]) %></div>
+                    </td>
+                  </tr>
+                <% end %>
+              <% end %>
+            </tbody>
+          </table>
+          <div class="flex justify-end mt-4">
+            <%= f.submit "Salvar", class: "text-white bg-blue-600 border-0 py-2 px-6 focus:outline-none hover:bg-blue-600 rounded text-lg" %> 
+          </div>
+        <% end %>
+      </div>
+    </div>
+    </div>
+  </div>
+</div>
