--- a/app/views/admin/available_times/index.html.erb
+++ b/app/views/admin/available_times/index.html.erb
@@ -1,5 +1,6 @@
 
 <div class="container border-solid border border-gray-600 rounded-lg">
+
   <div class="content-center p-4">
     <div class="<%= @available_times.any? ? 'flex' : '' %> justify-between">
       <%= render "shared/simple_alert" %>
@@ -10,11 +11,11 @@
             Menu
           </button>
           <div x-show="open" class="mt-2">
-            <%= link_to 'Atualizar horários', new_admin_store_path, class: "block bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" %>
+            <%= link_to 'Atualizar horários', polymorphic_path([:update_all, :admin, @resource, :available_times]), class: "block bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" %>
           </div>
         </div>
           <div class="hidden md:block">
-            <%= link_to 'Atualizar horários', new_admin_store_path, class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded " %>
+            <%= link_to 'Atualizar horários', polymorphic_path([:update_all, :admin, @resource, :available_times]), class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded " %>
           </div>
         </div>
       <% end %>
