--- a/app/views/admin/services/_service.html.erb
+++ b/app/views/admin/services/_service.html.erb
@@ -1,10 +1,11 @@
 <tr>
   <td class="px-6 py-4 whitespace-nowrap"><%= service.name || "N/D" %></td>
   <td class="px-6 py-4 whitespace-nowrap"><%= service.description || "N/D" %></td>
-  <td class="px-6 py-4 whitespace-nowrap"><%= service.duration || "N/D" %></td>
-  <td class="px-6 py-4 whitespace-nowrap"><%= service.price || "N/D" %></td>
+  <td class="px-6 py-4 whitespace-nowrap"><%= "#{service.duration} minutos" || "N/D" %></td>
+  <td class="px-6 py-4 whitespace-nowrap"><%= number_to_currency(service.price, unit: "R$ ", separator: ",", delimiter: "") || "N/D" %></td>
+  <td class="px-6 py-4 whitespace-nowrap"><%= service.professionals.map(&:name).join(", ") || "N/D" %></td>
   <td class="px-1 py-4 whitespace-nowrap">
-    <%= link_to edit_admin_professional_service_path(service.professional, service), class: "text-blue-600 inline-flex items-center hover:text-white border border-blue-600 hover:bg-blue-600 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-600 dark:focus:ring-blue-900 hover:text-white" do %>
+    <%= link_to edit_admin_service_path(service), class: "text-blue-600 inline-flex items-center hover:text-white border border-blue-600 hover:bg-blue-600 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:border-blue-500 dark:text-blue-500 dark:hover:text-white dark:hover:bg-blue-600 dark:focus:ring-blue-900 hover:text-white" do %>
       <svg class="w-5 h-5 mr-1 -ml-1 fill-transparent" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m14.3 4.8 2.9 2.9M7 7H4a1 1 0 0 0-1 1v10c0 .6.4 1 1 1h11c.6 0 1-.4 1-1v-4.5m2.4-10a2 2 0 0 1 0 3l-6.8 6.8L8 14l.7-3.6 6.9-6.8a2 2 0 0 1 2.8 0Z" clip-rule="evenodd"></path>
       </svg>
@@ -12,7 +13,7 @@
     <% end %>
     </td>
   <td class="px-1 py-4 whitespace-nowrap">
-    <%= link_to admin_professional_service_path(service.professional, service), data: { turbo_method: :delete, turbo_confirm: 'Tem certeza?' }, class: "text-red-600 inline-flex items-center hover:text-white border border-red-600 hover:bg-red-600 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:border-red-500 dark:text-red-500 dark:hover:text-white dark:hover:bg-red-600 dark:focus:ring-red-900" do %>
+    <%= link_to admin_service_path(service), data: { turbo_method: :delete, turbo_confirm: 'Tem certeza?' }, class: "text-red-600 inline-flex items-center hover:text-white border border-red-600 hover:bg-red-600 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:border-red-500 dark:text-red-500 dark:hover:text-white dark:hover:bg-red-600 dark:focus:ring-red-900" do %>
       <svg class="w-5 h-5 mr-1 -ml-1" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
         <path fill-rule="evenodd" d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z" clip-rule="evenodd"></path>
       </svg>
