--- a/app/views/admin/professionals/_form.html.erb
+++ b/app/views/admin/professionals/_form.html.erb
@@ -1,23 +1,27 @@
 <%= form_for [:admin, @professional] do |f| %>
-          <div class="grid gap-4 sm:grid-cols-2 sm:gap-6">
-              <div class="sm:col-span-2">
-                  <%= label_tag 'nome', nil, class: "block mb-2 text-sm font-medium text-gray-900" %>
-                  <%= f.text_field :name, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.500ay-600er-gray-400g-primary-500der-primary-500", placeholder: "Nome do profissional" %>
-              </div>
-              <div class="w-full">
-                  <%= label_tag 'e-mail', nil, class: "block mb-2 text-sm font-medium text-gray-900" %>
-                  <%= f.text_field :email, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.500ay-600er-gray-400g-primary-500der-primary-500", placeholder: "example@email.com" %>
-              </div>
-              <div class="w-full">
-                  <%= label_tag 'telefone', nil, class: "block mb-2 text-sm font-medium text-gray-900" %>
-                  <%= f.text_field :phone, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.500ay-600er-gray-400g-primary-500der-primary-500", placeholder: "(11) 91234-5678" %>
-              </div>
-              <div>
-                  <%= label_tag "administrador?", nil, class: "block mb-2 text-sm font-medium text-gray-900" %>
-                  <%= select_tag :admin, options_for_select([['Não', false], ['Sim', true]], @professional.admin?), class: 'bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.500ay-600er-gray-400g-primary-500der-primary-500' %>
-              </div>
-              <div>
-                <%= f.submit "Salvar Profissional", class: "inline-flex items-center justify-center w-full px-5 py-2.5 mt-4 sm:mt-6 text-sm font-medium text-center text-white bg-primary-700 rounded-lg focus:ring-4 focus:ring-primary-200 dark:focus:ring-primary-900 hover:bg-primary-800" %>
-              </div>
-          </div>
-      <% end %>
+    <div class="grid gap-4 sm:grid-cols-2 sm:gap-6">
+        <div class="sm:col-span-2">
+            <%= label_tag 'nome', nil, class: "block mb-2 text-sm font-medium text-gray-900" %>
+            <%= f.text_field :name, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.500ay-600er-gray-400g-primary-500der-primary-500", placeholder: "Nome do profissional" %>
+        </div>
+        <div class="w-full">
+            <%= label_tag 'e-mail', nil, class: "block mb-2 text-sm font-medium text-gray-900" %>
+            <%= f.text_field :email, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.500ay-600er-gray-400g-primary-500der-primary-500", placeholder: "example@email.com" %>
+        </div>
+        <div class="w-full">
+            <%= label_tag 'telefone', nil, class: "block mb-2 text-sm font-medium text-gray-900" %>
+            <%= f.text_field :phone, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.500ay-600er-gray-400g-primary-500der-primary-500", placeholder: "(11) 91234-5678" %>
+        </div>
+        <div class="w-full">
+            <%= label_tag 'imagem de divulgação', nil, class: "block mb-2 text-sm font-medium text-gray-900"%>
+            <%= f.file_field :avatar, class: "block w-full text-sm text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50  focus:outline-none" %>
+        </div>
+        <div>
+            <%= label_tag "administrador?", nil, class: "block mb-2 text-sm font-medium text-gray-900" %>
+            <%= select_tag :admin, options_for_select([['Não', false], ['Sim', true]], @professional.admin?), class: 'bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full p-2.500ay-600er-gray-400g-primary-500der-primary-500' %>
+        </div>
+        <div>
+        <%= f.submit "Salvar Profissional", class: "inline-flex items-center justify-center w-full px-5 py-2.5 mt-4 sm:mt-6 text-sm font-medium text-center text-white bg-primary-700 rounded-lg focus:ring-4 focus:ring-primary-200 dark:focus:ring-primary-900 hover:bg-primary-800" %>
+        </div>
+    </div>
+<% end %>
