--- a/app/views/admin/professionals/index.html.erb
+++ b/app/views/admin/professionals/index.html.erb
@@ -8,11 +8,11 @@
           Menu
         </button>
         <div x-show="open" class="mt-2">
-          <%= link_to 'Cadastrar Profissional', new_admin_professional_path, data: { turbo_frame: "new_professional"}, class: "block bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" %>
+          <%= link_to 'Cadastrar Profissional', new_admin_professional_path, class: "block bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" %>
         </div>
       </div>
       <div class="hidden md:block">
-        <%= link_to 'Cadastrar Profissional', new_admin_professional_path, data: { turbo_frame: "new_professional"}, class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded " %>
+        <%= link_to 'Cadastrar Profissional', new_admin_professional_path, class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded " %>
       </div>
     </div>
     <div class="overflow-x-auto overflow-auto border-solid">
