--- a/app/views/admin/services/_form.html.erb
+++ b/app/views/admin/services/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [:admin, @professional, @service] do |f| %>
+<%= form_for [:admin, @service] do |f| %>
   <div class="grid gap-4 sm:grid-cols-2 sm:gap-6">
     <div class="sm:col-span-2">
         <%= label_tag 'nome', nil, class: "block mb-2 text-sm font-medium text-gray-900" %>
@@ -13,11 +13,16 @@
         <%= f.text_field :duration, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.500ay-600er-gray-400g-primary-500der-primary-500", placeholder: "Em minutos. Ex: 60" %>
     </div>
     <div class="w-full">
-        
+        <%= label_tag 'imagem de divulgação', nil, class: "block mb-2 text-sm font-medium text-gray-900"%>
+        <%= f.file_field :image, class: "block w-full text-sm text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50  focus:outline-none" %>
     </div>
     <div class="sm:col-span-2">
         <%= label_tag "descrição do serviço", nil, class: "block mb-2 text-sm font-medium text-gray-900" %>
         <%= f.text_area :description, class: "block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-primary-500 focus:border-primary-500", rows: "8", placeholder: "Descrição do serviço" %>
+    </div>
+    <div class="sm:col-span-2">
+        <%= label_tag "Profissionais que executam esse serviço", nil, class: "block mb-2 text-sm font-medium text-gray-900" %>
+        <%= select_tag "professional_ids[]", options_from_collection_for_select(@professionals, "id", "name", @service.professionals.map(&:id)), class: "block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-primary-500 focus:border-primary-500", rows: "8", multiple: true %>
     </div>
     <div>
       <%= f.submit "Salvar serviço", class: "inline-flex items-center px-5 py-2.5 mt-4 sm:mt-6 text-sm font-medium text-center text-white bg-primary-700 rounded-lg focus:ring-4 focus:ring-primary-200 dark:focus:ring-primary-900 hover:bg-primary-800" %>
