--- a/app/views/admin/services/edit.html.erb
+++ b/app/views/admin/services/edit.html.erb
@@ -1,6 +1,8 @@
-<div class="bg-white p-4">
-    <div class="py-8 px-4 mx-auto max-w-2xl lg:py-16">
-      <h2 class="mb-4 text-xl font-bold text-gray-900">Editar Serviço: <%= @service.name %></h2>
-      <%= render "form" %>
-    </div>
-</div>
+<%= turbo_frame_tag "services" do %>
+  <div class="bg-white p-4">
+      <div class="py-8 px-4 mx-auto max-w-2xl lg:py-16">
+        <h2 class="mb-4 text-xl font-bold text-gray-900">Editar Serviço: <%= @service.name %></h2>
+        <%= render "form" %>
+      </div>
+  </div>
+<% end %>
