--- a/app/views/services/index.html.erb
+++ b/app/views/services/index.html.erb
@@ -1,4 +1,66 @@
-<div>
-  <h1 class="font-bold text-4xl">Services#index</h1>
-  <p>Find me in app/views/services/index.html.erb</p>
+
+<div class="relative overflow-hidden bg-white-900 pt-16 pb-32 space-y-24">
+  <% @services.each_with_index do |service, index| %>
+      <% if index.even? %>
+        <div class="relative">
+            <div class="lg:mx-auto lg:grid lg:max-w-7xl lg:grid-flow-col-dense lg:grid-cols-2 lg:gap-24 lg:px-8 ">
+                <div class="mx-auto max-w-xl px-6 lg:mx-24 lg:py-16 lg:px-0">
+                    <div>
+                        <div class="mt-6">
+                            <h2 class="text-3xl font-bold tracking-tight text-dark">
+                                <%= service.name %>
+                            </h2>
+                            <p class="mt-4 text-lg text-gray-600">
+                                <%= service.description %>
+                            </p>
+                            <div class="mt-6">
+                                <a class="inline-flex rounded-lg bg-blue-600 px-4 py-1.5 text-base font-semibold leading-7 text-white shadow-sm ring-1 ring-blue-600 hover:bg-blue-700 hover:ring-blue-700"
+                                    href="/login">
+                                    Agendar
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="mt-12 sm:mt-16 lg:mt-0">
+                    <div class="-mr-48 pl-6 md:-mr-16 lg:relative lg:m-0 lg:h-full lg:px-0">
+                        <% if service.image.attached? && service.image.representable? %>
+                          <%= image_tag(service.image.representation(resize_to_limit: [600, 400]), class: "w-full rounded-xl shadow-2xl ring-1 ring-black ring-opacity-5 lg:absolute lg:left-0 lg:h-full lg:w-auto lg:max-w-none") %>
+                        <% end %>
+                    </div>
+                </div>
+            </div>
+        </div>
+      <% else %>
+        <div class="relative">
+            <div class="lg:mx-auto lg:grid lg:max-w-7xl lg:grid-flow-col-dense lg:grid-cols-2 lg:gap-24 lg:px-8 ">
+                <div class="mx-auto max-w-xl px-6 lg:mx-0 lg:max-w-none lg:py-16 lg:px-0 lg:col-start-2">
+                    <div>
+                        <div class="mt-6">
+                            <h2 class="text-3xl font-bold tracking-tight text-dark">
+                                <%= service.name %>
+                            </h2>
+                            <p class="mt-4 text-lg text-gray-600">
+                                <%= service.description %>
+                            </p>
+                            <div class="mt-6">
+                                <a class="inline-flex rounded-lg bg-blue-600 px-4 py-1.5 text-base font-semibold leading-7 text-white shadow-sm ring-1 ring-blue-600 hover:bg-blue-700 hover:ring-blue-700"
+                                    href="/login">
+                                    Agendar
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="mt-12 sm:mt-16 lg:mt-0">
+                    <div class="-ml-48 pr-6 md:-ml-16 lg:relative lg:m-0 lg:h-full lg:px-0">
+                        <% if service.image.attached? && service.image.representable? %>
+                          <%= image_tag(service.image.representation(resize_to_limit: [600, 400]), class: "w-full rounded-xl shadow-xl ring-1 ring-black ring-opacity-5 lg:absolute lg:right-0 lg:h-full lg:w-auto lg:max-w-none") %>
+                        <% end %>
+                    </div>
+                </div>
+            </div>
+        </div>
+      <% end %>
+    <% end %>
 </div>
