--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,12 +1,12 @@
 <nav x-data="{ open: false }"class="bg-gray dark:bg-gray-300 fixed w-full z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-900">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
   <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
-      <%= image_tag("logo.png", class: "h-8", alt: "Logo") %>
-      <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-dark hover:text-blue-500">Cabelereiros</span>
+      <%= image_tag("logo2.jpg", class: "h-8 w-8 rounded-full hover:border-blue-500", alt: "Logo") %>
+      <span class="self-center text-2xl min-[0px]:max-[500px]:hidden font-semibold whitespace-nowrap dark:text-dark hover:text-blue-500">Sr. Prudente</span>
   </a>
   <div class="flex md:order-2 space-x-3 md:space-x-2 rtl:space-x-reverse">
       <% if current_user %>
-        <%= link_to "logout", logout_path, class: "text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-sm px-4 py-2  text-center dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800", data: { turbo_method: :delete } %>
+        <%= link_to "logout", logout_path, class: "text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800", data: { turbo_method: :delete } %>
       <% else %>
         <%= link_to "Criar conta", new_customer_path, class: "text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" %>
         <%= link_to "Login", login_path, class: "text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:outline-none focus:ring-green-300 font-medium rounded-lg text-sm px-4 py-2  text-center dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800" %>
