--- a/app/views/admin/stores/_form.html.erb
+++ b/app/views/admin/stores/_form.html.erb
@@ -12,6 +12,10 @@
         <%= label_tag 'telefone', nil, class: "block mb-2 text-sm font-medium text-gray-900" %>
         <%= f.text_field :phone, class: "bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.500ay-600er-gray-400g-primary-500der-primary-500", placeholder: "(11) 91234-5678" %>
     </div>
+    <div class="w-full">
+        <%= label_tag 'imagem de divulgação', nil, class: "block mb-2 text-sm font-medium text-gray-900"%>
+        <%= f.file_field :image, class: "block w-full text-sm text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50  focus:outline-none" %>
+    </div>
     <div class="sm:col-span-2">
         <%= label_tag "descrição da loja", nil, class: "block mb-2 text-sm font-medium text-gray-900" %>
         <%= f.text_area :description, class: "block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-primary-500 focus:border-primary-500", rows: "8", placeholder: "Bio da loja" %>
