--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -28,7 +28,8 @@
                       <%= f.hidden_field :professional_id, value: professional.id %>
                       <%= f.hidden_field :date, value: date %>
                       <%= f.hidden_field :hour, value: hour %>
-                      <%= f.hidden_field :customer_id, value: @customer.id %>
+                      <%= f.hidden_field :customer_id, value: @customer&.id %>
+                      <%# TODO: Arrumar isso aqui para quando acessar com um professional%>
                       <%= f.hidden_field :duration, value: @service.duration %>
                       <%= f.hidden_field :price, value: @service.price %>
                       <%= f.submit hour, class: "bg-blue-100 hover:bg-blue-200 text-blue-800 text-xs font-semibold me-2 px-2.5 py-0.5 rounded  border border-blue-400 inline-flex items-center justify-center" %>
