--- a/app/views/schedules/my_schedules.html.erb
+++ b/app/views/schedules/my_schedules.html.erb
@@ -89,6 +89,10 @@
     </ol>
 </div>
       <% end %>
+      <% else %>
+      <div class="p-5 mb-4 border border-gray-100 rounded-lg bg-gray-50">
+        <h1 class="text-lg font-semibold text-gray-900">Nenhum agendamento futuro</h1>
+      </div>
       <% end %>
     </div>
   </div>
