--- a/app/views/schedules/index.html.erb
+++ b/app/views/schedules/index.html.erb
@@ -32,8 +32,8 @@
                       <%# TODO: Arrumar isso aqui para quando acessar com um professional%>
                       <%= f.hidden_field :duration, value: @service.duration %>
                       <%= f.hidden_field :price, value: @service.price %>
-                      <%= f.submit hour, class: "bg-blue-100 hover:bg-blue-200 text-blue-800 text-xs font-semibold me-2 px-2.5 py-0.5 rounded  border border-blue-400 inline-flex items-center justify-center" %>
-                  <% end %>
+                      <%= f.submit hour,  data: { turbo_confirm: "Confirma o agendamento para à(s) #{hour} do dia #{date.strftime("%d/%m/%Y")}?" }, class: "bg-blue-100 hover:bg-blue-200 text-blue-800 text-xs font-semibold me-2 px-2.5 py-0.5 rounded  border border-blue-400 inline-flex items-center justify-center" %>
+                    <% end %>
                   </div>
                 <% end %>
               </div>
